assets/css/custom.css
---
---

@import url('https://fonts.googleapis.com/css?family=Noto+Sans');

@media only screen and (max-width: 800px) {
  #container {
    width: 90%;
  }
}

@media only screen and (max-width: 800px) {
  nav {
    width: 90% !important;
  }
}

* {
  font-family: 'Noto Sans', sans-serif;
  line-height: 1.75em;
}

body {
  margin: 0;
}

.container {
  width: 65%;
  margin: 0 auto;
}

.body-text {
  font-size: 11pt;
  margin-top: 2em;
}

.bullet {
  margin-top: 0.15em;
  margin-bottom: 0;
}

.bullet-last {
  margin-top: 0.15em;
}

.center {
  margin: 0 auto;
  text-align: center;
}

.contact {
  width: 10%;
}

.contact-container {
  position: relative;
  display: inline;
  margin: 0 1.25%;
  text-decoration: none;
}

#copy-link {
  color: white;
  border-color: white;
}

#download {
  height: 1.5em;
}

.footer-space {
  margin-bottom: 4em;
}

.header {
  background-color: black;
  font-size: 13pt;
  height: 2.5em;
}

.header-div {
  width: 33%;
  margin: 0 auto;
}

.hidden {
  visibility: hidden;
}

iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.iframe-container {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
}

.left {
  float: left;
}

.line-head {
  margin-bottom: 0;
}

.logo {
  width: 15%;
}

.logo-container {
  position: relative;
  display: inline;
  margin: 0 1.25%;
}

.logo-wide {
  position: relative;
  width: 25%;
  padding-bottom: 2%;
}

#logos {
  margin: 20px auto;
}

nav {
  height: 100%;
  width: 65%;
  margin: 0 auto;
}

.nav-link {
  display: inline-block;
  text-decoration: none;
  color: white;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

.nocode {
  color: white !important;
}

.no-pointer {
  cursor: none;
}

#pgp-key {
  font-family: monospace;
  font-size: 11pt;
  padding: 0;
  border-width: 0;
  resize: none;
  display: block;
  cursor: pointer;
}

.post-date {
  margin-top: 0;
  margin-bottom: 2em;
  color: #555;
}

.post-date-home {
  margin-top: 2em;
  margin-bottom: 0;
  color: #555;
}

.post-head {
  margin-bottom: 0.25em;
}

.post-head-home {
  margin-top: 0;
  font-size: 1.75em;
  font-weight: normal;
  margin-bottom: 0;
}

.post-summary {
  margin-top: 0;
}

#resume {
  margin: 20px auto;
}

.resume-border {
  border-style: solid;
  border-color: #666;
  border-radius: 5px;
  border-width: 1px;
  padding: 15px;
}

.resume-button {
  border-color: black;
  border-radius: 5px;
  font-size: 8pt;
  font-weight: bold;
  margin-left: 3px;
  border-width: 1px;
  border-style: solid;
  vertical-align: middle;
  height: 100%;
  padding: 2px 5px;
  cursor: pointer;
  text-decoration: none;
  color: black;
}

.resume-button-wrapper {
  display: block;
  height: 1.5em;
}

.right {
  float: right;
  text-align: right;
}

pre,
code {
  border-radius: 3px;
  background-color: #efefef;
  font-family: monospace;
  padding: 1px 5px;
}

